Fix the unevenness caused by using Linux

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .Hero {
@@ -8,7 +10,7 @@ body {
     margin: 0;
     /* padding: 10px 90px; */
     color: #F9FAF8;
-    height: 50vw;
+    height: 30vw;
 }
 
 .header {
@@ -20,7 +22,7 @@ body {
     height: 70px;
     align-items: center;
     z-index: 9999; /* causes items to always flow under the fixed header*/
-    gap: 165px; /*increased after last git push*/
+    gap: 600px; /*increased after last git push*/
 }
 
 .logo {
@@ -30,6 +32,7 @@ body {
     -webkit-text-fill-color: transparent;
     margin-top: 13px;
     padding-left: 90px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .links {
@@ -43,6 +46,7 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
+    gap: 20px;
 }
 
 .links ul li {
@@ -93,12 +97,14 @@ body {
 }
 
 .Left-About > p {
-    font-size: small;
+    font-size: 0.9rem; /* changed from small */
+    line-height: 1.3rem;
 }
 
 /* Button */
 .Learn-more {
     display: flex;
+    margin-top: 25px;
 }
 
 .Learn-more > a > button {
@@ -107,7 +113,7 @@ body {
     border-radius: 5px;
     border: none;
     background-color: aqua;
-    cursor: grab;
+    cursor: pointer;
 }
 
 .Learn-more > a {
@@ -122,8 +128,8 @@ body {
     justify-content: center;
 }
 .Right-About > img {
-    height: 250px;
-    width: 300px;
+    height: 300px;
+    width: 500px;
     border-radius: 10px;
 }
 
@@ -164,8 +170,8 @@ body {
     /* justify-content: center; */
     /* filter: blur(10px); */
     background-color: #f4f4f4;
-    height: 150px;
-    width: 95px;
+    height: 155px;
+    width: 170px;
     position: relative;
     border: 1px solid chartreuse;
     border-radius: 5px;
@@ -235,24 +241,25 @@ body {
 
 .items {
     border: 1px solid blue;
+    height: 135px;
     border-radius: 5px;
     background-color: blue;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px;
-    gap: 50px;
+    padding: 20px 30px;
+    gap: 100px;
 }
 
 .text > span {
     font-weight: bolder;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 .text p {
-    font-size: smaller;
-    font-weight: bolder;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 .action-btn a {
@@ -266,13 +273,17 @@ body {
     border-radius: 3px;
     font-size: smaller;
     font-weight: bolder;
-    width: 105px;
+    width: 150px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: grab;
+    cursor: pointer;
     box-shadow: inset 0 -10px 20px -10px rgb(255, 81, 0);
+}
+
+.action-btn button:hover {
+    background-color: lawngreen;
 }
 
 
@@ -287,4 +298,5 @@ footer {
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: smaller;
 }
